Updated Programs from collect(Collectors.toList()) to.List()