@@ -9,7 +9,7 @@ public class UpperCase {
         List<String> words = Arrays.asList("cat", "apple", "dog", "banana", "sky", "java");
         List<String> upperCaseWords = words.stream()
                 .map(String::toUpperCase) // Convert each word to uppercase
-                .collect(Collectors.toList()); // Collect the results into a list
+                .toList(); // Collect the results into a list
 
         System.out.println("Words in uppercase: " + upperCaseWords);
     }
